tests/paczka1/small_fuzzy/84084632.err
Error in line 4: 0QWma A883 62,0
Error in line 5: 0QWma S112 99,5
Error in line 7: 0QWma A883 56,3
